fix(css): Selected Day Coloring on Mobile Devices
On mobile devices, if you select a day, a dark blue box is display for
the selected day. The text still default to black color which makes
overall a black text appear on very dark blue background.

This change fixes it, by being applied in mobile scenarios where we now
switch to white text color instead.

--- a/src/the-events-calendar/colors/main.css
+++ b/src/the-events-calendar/colors/main.css
@@ -4,3 +4,11 @@
   --tec-color-accent-primary-active: var(--gest-primary-accent-hover);
   --tec-color-background: var(--gest-site-bg);
 }
+
+/*
+ * Fixes black text on dark blue background on mobile devices for selected
+ * days in the calendar.
+ */
+.tribe-events-calendar-month__day-cell--mobile.tribe-events-calendar-month__day-cell--selected .tribe-events-calendar-month__day-date-daynum {
+  color: var(--white-color);
+}
